chore: add libs for istio

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -21,7 +21,7 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v4
-      
+
     - run: pipx install tox
     - run: tox -vve lint
 
@@ -44,6 +44,11 @@ jobs:
   integration-test:
     name: Integration
     runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        test-type:
+          - integration
+          - integration-ambient
     steps:
       - name: Maximise GH runner space
         uses: jlumbroso/free-disk-space@v1.3.1
@@ -61,6 +66,14 @@ jobs:
           sudo snap install concierge --classic
           sudo concierge prepare --trace
 
+      - name: Configure Cilium for Canonical K8s
+        if: matrix.test-type == 'integration-ambient'
+        run: |
+          # Configure Cilium for Canonical K8s to work with Charmed Istio (Ambient mode)
+          # See https://canonical-service-mesh-documentation.readthedocs-hosted.com/en/latest/how-to/use-charmed-istio-with-canonical-kubernetes/
+          kubectl -n kube-system patch configmap cilium-config --type merge --patch '{"data":{"bpf-lb-sock-hostns-only":"true"}}'
+          kubectl -n kube-system rollout restart daemonset cilium
+
       - name: Run test
         run: |
           # Requires the model to be called kubeflow due to this bug:
@@ -69,7 +82,7 @@ jobs:
           wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install ./google-chrome-stable_current_amd64.deb
           sudo apt-get install chromium-chromedriver
-          tox -e integration -- --model kubeflow
+          tox -e ${{ matrix.test-type }} -- --model kubeflow
 
       - name: Get istio gateway
         run: kubectl get gateway -A
