--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ copyright-check = "True"
 copyright-author = "Canonical Ltd."
 copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
 
+[tool.pyright]
+extraPaths = ["lib"]
+
 [tool.poetry]
 package-mode = false
 
@@ -46,7 +49,7 @@ package-mode = false
 optional = true
 
 [tool.poetry.group.charm.dependencies]
-charmed-kubeflow-chisme = ">=0.4.14"
+charmed-kubeflow-chisme = "^0.4.23"
 bcrypt = "^4.2.1"
 cosl = "^0.0.50"
 jinja2 = "^3.1.4"
@@ -55,6 +58,8 @@ ops = "^2.17.1"
 pydantic = "^2.10.3"
 serialized-data-interface = "^0.7.0"
 owasp-logger = "^0.1.3"
+charmed-service-mesh-helpers = "^0.3.0"
+lightkube-extensions = "^0.3.0"
 
 [tool.poetry.group.fmt]
 optional = true
@@ -91,7 +96,7 @@ optional = true
 [tool.poetry.group.integration.dependencies]
 juju = "<4.0"
 selenium = "<4.11"
-charmed-kubeflow-chisme = ">=0.4.14"
+charmed-kubeflow-chisme = "^0.4.23"
 aiohttp = "^3.10.11"
 jinja2 = "^3.1.4"
 lightkube = "^0.15.6"
