--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ max-line-length = 100
 [tox]
 skipsdist = True
 skip_missing_interpreters = True
-envlist = fmt, lint, unit, integration
+envlist = fmt, lint, unit, integration, integration-ambient
 
 [vars]
 all_path = {[vars]src_path} {[vars]tst_path}
@@ -15,36 +15,36 @@ src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
 
 [testenv]
-passenv = 
+passenv =
 	PYTHONPATH
 	CHARM_BUILD_DIR
 	MODEL_SETTINGS
 	KUBECONFIG
-setenv = 
+setenv =
 	PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
 	PYTHONBREAKPOINT=ipdb.set_trace
 	PY_COLORS=1
-deps = 
+deps =
 	poetry>=2.1.3
 
 [testenv:update-requirements]
-commands = 
+commands =
 	# updating all groups' locked dependencies:
 	poetry lock --regenerate
 description = Update requirements
 skip_install = true
 
 [testenv:fmt]
-commands = 
+commands =
 	isort {[vars]all_path}
 	black {[vars]all_path}
 description = Apply coding style standards to code
-commands_pre = 
+commands_pre =
 	poetry install --only fmt
 skip_install = true
 
 [testenv:lint]
-commands = 
+commands =
 	# uncomment the following line if this charm owns a lib
 	# codespell {[vars]lib_path}
 	codespell {toxinidir}/. --skip {toxinidir}/./.git --skip {toxinidir}/./.tox \
@@ -57,32 +57,40 @@ commands =
 	isort --check-only --diff {[vars]all_path}
 	black --check --diff {[vars]all_path}
 description = Check code against coding style standards
-commands_pre = 
+commands_pre =
 	poetry install --only lint
 skip_install = true
 
 [testenv:unit]
-commands = 
+commands =
 	coverage run --source={[vars]src_path} \
 	-m pytest --ignore={[vars]tst_path}integration -vv --tb native {posargs}
 	coverage report
 	coverage xml
 description = Run unit tests
-commands_pre = 
+commands_pre =
 	poetry install --only unit,charm
 skip_install = true
 
 [testenv:integration]
-commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration {posargs} \
+commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration/test_charm.py {posargs} \
 	--ignore={toxinidir}/tests/integration/test_upgrade_charm.py
 description = Run integration tests
-commands_pre = 
+commands_pre =
+	poetry install --only integration
+skip_install = true
+
+[testenv:integration-ambient]
+commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration/test_charm_ambient.py {posargs} \
+	--ignore={toxinidir}/tests/integration/test_upgrade_charm.py
+description = Run integration tests for ambient mesh
+commands_pre =
 	poetry install --only integration
 skip_install = true
 
 [testenv:tflint]
-allowlist_externals = 
+allowlist_externals =
 	tflint
-commands = 
+commands =
 	tflint --chdir=terraform --recursive
 description = Check Terraform code against coding style standards
