--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -45,8 +45,12 @@ jobs:
     name: Integration
     runs-on: ubuntu-24.04
     steps:
+      - name: Maximise GH runner space
+        uses: jlumbroso/free-disk-space@v1.3.1
+
       - name: Check out code
         uses: actions/checkout@v4
+
       - name: Install dependencies
         run: pipx install tox
 
