--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -84,11 +84,11 @@ jobs:
         if: failure()
 
       - name: Get oidc-gatekeeper workload logs
-        run: kubectl logs -l app.kubernetes.io/name=oidc-gatekeeper -n kubeflow
+        run: kubectl logs -l app.kubernetes.io/name=oidc-gatekeeper -n kubeflow -c oidc-authservice
         if: failure()
 
       - name: Get oidc-gatekeeper operator logs
-        run: kubectl logs -l operator.juju.is/name=oidc-gatekeeper -n kubeflow
+        run: kubectl logs -l app.kubernetes.io/name=oidc-gatekeeper -n kubeflow -c charm
         if: failure()
 
       - name: Get dex container logs
