review(mattia): remove redundant exlusion in tox

--- a/tox.ini
+++ b/tox.ini
@@ -73,16 +73,14 @@ commands_pre =
 skip_install = true
 
 [testenv:integration]
-commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration/test_charm.py {posargs} \
-	--ignore={toxinidir}/tests/integration/test_upgrade_charm.py
+commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration/test_charm.py {posargs}
 description = Run integration tests
 commands_pre =
 	poetry install --only integration
 skip_install = true
 
 [testenv:integration-ambient]
-commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration/test_charm_ambient.py {posargs} \
-	--ignore={toxinidir}/tests/integration/test_upgrade_charm.py
+commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration/test_charm_ambient.py {posargs}
 description = Run integration tests for ambient mesh
 commands_pre =
 	poetry install --only integration
